--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "midi": "^1.0.0"
+    "async": "^3.1.0",
+    "midi": "^1.0.0",
+    "midi-file": "^1.1.2"
   }
 }
