--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "readPlay.watch": "nodemon readPlay"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "async": "^3.1.0",
     "midi": "^1.0.0",
     "midi-file": "^1.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.3"
   }
 }
