--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "async": "^3.1.0",
     "midi": "^1.0.0",
-    "midi-file": "^1.1.2"
+    "midi-file": "^1.1.2",
+    "node-pid-controller": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
