--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.13",
     "async": "^3.1.0",
     "midi": "^1.0.0",
     "midi-file": "^1.1.2",
