--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "watch": "nodemon index",
     "readPlay.watch": "nodemon readPlay"
   },
@@ -13,6 +13,7 @@
   "dependencies": {
     "adm-zip": "^0.4.13",
     "async": "^3.1.0",
+    "jest": "24.9.0",
     "midi": "^1.0.0",
     "midi-file": "^1.1.2",
     "node-pid-controller": "^1.0.1"
